# policyengine-canada

./: .buildinfo  .gitignore  =0.3.0  CHANGELOG.md  MANIFEST.in  Makefile  README.md  changelog.yaml  changelog_entry.yaml  example.html  genindex.html  household_net_income.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  test.yaml  test_output.txt
.claude/subagents/: README.md  config.yaml  policyengine-rules-reviewer.md  policyengine_rules_reviewer.py
.github/: get-changelog-diff.sh  update_api.py
.github/workflows/: pr.yaml  push.yaml
Users/maxghenis/: .profile
_sources/: household_net_income.ipynb
changelog.d/: federal-2024-2025-params.added.md  fix-docs-build.fixed.md  fix-docs-makefile.fixed.md  fix-push-workflow.fixed.md  upgrade-python-3.14.changed.md
docs/: _config.yml  _toc.yml  example.ipynb  household_net_income.ipynb  index.md
policyengine_canada/: __init__.py  entities.py  model_api.py  modelled_policies.yaml  systems.py
policyengine_canada/data/datasets/: country_template_dataset.py
policyengine_canada/parameters/gov/: age_exemption.yaml  income_tax_schedule.yaml
policyengine_canada/parameters/gov/cra/: README.md
policyengine_canada/parameters/simulation/: marginal_tax_rate_adults.yaml
policyengine_canada/situation_examples/: __init__.py
policyengine_canada/tests/benefits/cpp/: cpp_retirement_pension.yaml
policyengine_canada/tests/benefits/employment_insurance/: ei_benefit.yaml
policyengine_canada/tests/core/: test_pandas3_compatibility.py
policyengine_canada/tests/gov/: benefits_integration.yaml  income_tax.yaml  integration.yaml
policyengine_canada/tests/gov/credits/: training_credit.yaml
policyengine_canada/tests/household/: cohabitating_dependant.py
policyengine_canada/tests/household/person/: adult_years_in_canada_spouse.yaml  age_spouse.yaml  is_dependant.yaml  person_index.yaml  spouse_income.yaml
policyengine_canada/tests/payroll/: cpp2_contribution.yaml  cpp_contribution.yaml  ei_premium.yaml
policyengine_canada/tools/: general.py
policyengine_canada/tools/taxcalc/: generate_taxcalc_variable.py
policyengine_canada/variables/gov/: benefits.py  grants.py  household_net_income.py  income_tax.py
policyengine_canada/variables/gov/cra/: adjusted_family_net_income.py
policyengine_canada/variables/gov/esdc/: maternity_and_parental_benefit.py  registered_disability_savings_plan_income.py
policyengine_canada/variables/household/: cohabitating_dependant.py  marginal_tax_rate.py
policyengine_canada/variables/household/demographic/: filing_status.py
policyengine_canada/variables/household/expense/: consumption.py
policyengine_canada/variables/household/expenses/: dental_expenses.py  disability_support_expenses.py  disability_supports_expense.py  has_private_dental_insurance.py  medical_expenses.py  specialized_respite_services_expenses.py
policyengine_canada/variables/household/ids/: household_id.py  person_id.py
policyengine_canada/variables/household/income/: employment_income.py  investment_income.py  maternity_and_parental_benefit.py  self_employment_income.py  taxable_dividend_income.py  taxable_other_than_dividend_income.py  universal_child_care_benefit.py  universal_childcare_benfits.py
policyengine_canada/variables/household/person/: adult_years_in_canada.py  adult_years_in_canada_spouse.py  age.py  age_spouse.py  born_year.py  canadian_armed_forces_and_personnel_deduction.py  care_costs_for_self.py  care_expenses.py  childcare_expense.py  childcare_expenses.py  childcare_expenses_claimed_by_another_person.py  childcare_received.py  children.py  children_activities_fees.py  cohabitating_dependant.py  cohabitating_spouse.py  cohabitating_spouses.py  count_adult_disability_dependants.py  income.py  (+68 more)
policyengine_canada/variables/input/: employment_income.py  family_employment_income.py
validation/: SPSDM_VALIDATION_REPORT.md  spsdm_bridge.py  spsdm_comparison.py
validation/tests/: spsdm_ccb_validation.yaml  spsdm_gst_validation.yaml  spsdm_oas_validation.yaml
(+3012 files in other folders)
