[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policyengine-canada"
version = "0.96.6"
description = "Microsimulation model for Canada's tax-benefit system."
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["tax", "benefit", "microsimulation", "framework"]
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "policyengine_core>=3.23.6",
    "black[jupyter]",
    "coverage<7",
    "dpath<3",
    "h5py>=3,<4",
    "linecheck<1",
    "microdf_python>=1.2.1",
    "nptyping<2",
    "numexpr<3",
    "pandas>=2.2.0",
    "plotly>=5.6.0,<6",
    "pytest",
    "requests>=2.27.1,<3",
    "sortedcontainers<3",
    "tqdm>=4.46.0,<5",
    "wheel<1",
    "yaml-changelog==0.3.0",
]

[project.optional-dependencies]
dev = [
    "furo",
    "jupyter-book",
    "markupsafe",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-argparse",
    "sphinx-math-dollar",
]

[project.urls]
Homepage = "https://github.com/policyengine/policyengine-canada"
Repository = "https://github.com/policyengine/policyengine-canada"

[tool.hatch.build.targets.wheel]
packages = ["policyengine_canada"]

[tool.hatch.build.targets.sdist]
include = [
    "/policyengine_canada",
    "/README.md",
    "/LICENSE",
]
