[project]
name = "policyengine-canada"
version = "0.97.3"
description = "Microsimulation model for Canada's tax-benefit system."
readme = "README.md"
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "black[jupyter]",
    "coverage<7",
    "dpath<3",
    "h5py>=3,<4",
    "linecheck<1",
    "microdf_python>=1.2.1",
    "nptyping<2",
    "numexpr<3",
    "pandas>=2.2.0",
    "plotly>=5.6.0,<6",
    "policyengine_core>=3.23.6",
    "pytest",
    "requests>=2.27.1,<3",
    "sortedcontainers<3",
    "tqdm>=4.46.0,<5",
    "wheel<1",
]

[project.optional-dependencies]
dev = [
    "build",
    "furo",
    "jupyter-book<2",
    "markupsafe",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-argparse",
    "sphinx-math-dollar",
    "towncrier>=24.8.0",
]

[project.urls]
Homepage = "https://github.com/policyengine/policyengine-canada"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["policyengine_canada"]

[tool.towncrier]
package = "policyengine_canada"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
